<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/score_text"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/score"
            android:textSize="24sp"

            />

        <TextView
            android:id="@+id/score_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:textSize="24sp"
            tools:text="#" />
    </LinearLayout>

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="match_parent"
        android:textSize="24sp"
        tools:text="Question Text Will Display Here"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="20dp"
        >


        <Button
            android:id="@+id/trueButton"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/t"
            android:textSize="24sp"
            android:backgroundTint="@color/blue"

            />

        <Button
            android:id="@+id/falseButton"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/f"
            android:textSize="24sp"
            android:backgroundTint="@color/red"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/previousButton"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/previous"
            android:textSize="24sp"
            android:backgroundTint="@color/teal_700">
        </Button>
        <Button
            android:id="@+id/nextButton"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/next"
            android:textSize="24sp"
            android:backgroundTint="@color/teal_700">
        </Button>
    </LinearLayout>

</LinearLayout>
